[package]
name = "rustyblog"
version = "0.0.0"
authors = ["Arthur Asatryan <biacoder@gmail.com>"]
description = "Blogging platform written in Rust"
documentation = "https://docs.rs/rustyblog"
homepage = "https://github.com/Biacode/rustyblog"
repository = "https://github.com/Biacode/rustyblog"
keywords = ["blog", "blogging-platform", "rustyblog", "engine"]
readme = "README.md"
license = "Apache-2.0"
exclude = [
    ".travis.yml",
    ".gitignore",
]

[lib]
name = "rustyblog"
path = "src/lib.rs"

[dependencies]
rocket = "0.2.4"
rocket_codegen = "0.2.4"
diesel = { version = "0.11.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"